# mycosoft-mas

./: .coverage  .credentials.local.example  .cursor.json  .cursorignore  .dockerignore  .env  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .lfsconfig  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AUTOMATION_COMPLETE.md  AUTOMATION_FINAL_REPORT.md  AUTO_INDEXING_COMPLETE.md  AZURE_DEPLOYMENT_GUIDE.md  BUG_FIX_FINAL_SOLUTION.md  CHANGELOG.md  CHANGELOG_MYCOBRAIN.md  CHANGELOG_UPGRADES.md  CLAUDE.md  COMPLETE_SYSTEM_STATUS.md  COMPREHENSIVE_BROWSER_TESTING_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_ISSUE_RESOLUTION.md  CURSOR_CRASH_FIX_COMPLETE.md  CURSOR_PERFORMANCE_FIX.md  DEPENDENCY_TREE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DEPLOY_TO_SANDBOX.ps1  DEVICE_RECOVERY_STATUS.md  DEVICE_STATUS_SUMMARY.md  DOCKER_INTEGRATION_PLAN.md  DOCKER_STATE_MANAGER.ps1  DOCKER_STATUS.md  DOCUMENT_INDEX.md  (+370 more)
.claude/: settings.json
.cursor/: CURSOR_DOCS_INDEX.md  README.md  docs_manifest.json  gap_report_index.json  mcp.json  settings.json
.githooks/: install.sh  pre-commit
.github/: dependabot.yml  labels.yml
agents/: bizdev_agent.yaml  finops_agent.yaml  lab_agent.yaml  opportunity_scout.yaml  pr_agent.yaml
app/: globals.css  layout.tsx  metadata.ts  page.tsx
bio/: fci_signal_analysis.py
bridges/: memory_bridge.cs  memory_bridge.hpp  memory_bridge.ts
components/: agent-manager.tsx  auth-provider.tsx  header.tsx  index.ts  knowledge-graph.tsx  loading.tsx  login-dialog.tsx  main-nav.tsx  mas-dashboard.tsx  mas-entity-modal.tsx  mas-navigation.tsx  mas-search-bar.tsx  mas-sidebar.tsx  mas-topology-view.tsx  myca-chat-input.tsx  myca-dashboard-unifi.tsx  myca-dashboard.tsx  myca-notification-modal.tsx  myca-notification-panel.tsx  myca-voice-replay.tsx  mycobrain-device-manager.tsx  notification-panel.tsx  system-metrics.tsx  task-form.tsx  task-manager.tsx  types.ts
config/: agent_config.json  avani_constitution.yaml  beto_onboarding_checklist.yaml  board_meetings.yaml  config.yaml  constitutional_boot_statement.yaml  csuite_openclaw_defaults.yaml  csuite_role_manifests.yaml  development.env  ethics_training_config.yaml  guardian_config.yaml  harness.env.example  kvtc_serving.yaml  litellm.yaml  litellm_config.yaml  llm_migration_rollout.yaml  mas_config.json  master_spreadsheet_automation.yaml  models.yaml  myca_full_persona.txt  myca_personaplex_prompt.txt  myca_personaplex_prompt_1000.txt  myca_personaplex_prompt_short.txt  myca_personaplex_short.txt  myca_personaplex_voice_only.txt  myca_soul.yaml  org_roles.yaml  production.env  proxmox202_csuite.yaml  proxmox_api.env.example  remote-dev.env  settings.py  voice_prompt_whitelist.json
contracts/: README.md
data/: mycobrain_service.log.err  mycobrain_service.pid  search_training_sink.jsonl  unifi_scan_20260313-1032.json  voice_feedback.db
deploy/: eagle-state-dot-cctv-ingest.service  eagle-state-dot-cctv-ingest.timer  mas-nemotron-local.env.example  mas-orchestrator.service  myca-os.service  myca_os.env.template  myca_os_logrotate.conf  mycosoft-mindex.service  mycosoft-website.service
docker/: Dockerfile.agent  docker-compose.agents.yml  docker-compose.yml  observability.yml  wait-for-it.sh
docs/: AEROSOL_VIRUS_RADIATION_FEEDS_COMPLETE_MAY03_2026.md  AEROSOL_VIRUS_RADIATION_FEEDS_PLAN_MAY01_2026.md  AGARIC_DEVICE_AND_DEVICE_TRACKER_MAY03_2026.md  AGARIC_DEVICE_REGISTRY_DEPLOY_HANDOFF_MAY04_2026.md  AGENT100_PREFLIGHT_MAY03_2026.md  AGENT_ACTIVATION_COMPLETE_FEB09_2026.md  AGENT_BUS_MIGRATION_GUIDE_FEB09_2026.md  AGENT_BUS_USAGE_FEB09_2026.md  AGENT_CENSUS_MAR02_2026.md  AGENT_DEPLOYMENT_README.md  AGENT_EVOLUTION_FRAMEWORK_JAN26_2026.md  AGENT_HANDOFF_NAS_MEDIA_INTEGRATION.md  AGENT_REGISTRY.md  AGENT_REGISTRY_FULL_FEB09_2026.md  AGENT_SECURITY_GUIDELINES_FEB12_2026.md  AGENT_SUBAGENT_INVOCATION_MANDATE_FEB18_2026.md  ALWAYS_ON_SERVICES_FEB12_2026.md  AMAZON_IMPORT_SUPABASE_COMPLETE_MAR07_2026.md  ANCESTRY_ALL_SPECIES_EXPANSION_COMPLETE_MAY03_2026.md  ANCESTRY_ALL_SPECIES_EXPANSION_PLAN_MAY01_2026.md  ANOMALIES_ENDPOINT_IMPLEMENTATION_FEB12_2026.md  ANSWERS_WIDGET_AND_ACTIVITY_STREAM_FEB10_2026.md  APIS_AND_KEYS_AUDIT_FEB06_2026.md  API_CATALOG_FEB04_2026.md  API_ENDPOINTS_REFERENCE.md  API_KEYS_SETUP_GUIDE.md  API_KEYS_STATUS.md  API_TOKEN_REGENERATION_GUIDE.md  ARCHIVE_NAS_MEDIA_CHAT_JAN19_20_2026.md  AUDIT_IMPLEMENTATION_COMPLETE_JAN20_2026.md  AUDIT_MYCA_MEMORY_IDENTITY_MAR21_2026.md  AUTH_DEPLOY_HARDENING_COMPLETE_MAR15_2026.md  AUTH_TEST_REPORT_20260123_164814.md  AUTH_VERIFICATION_REPORT_JAN23_2026.md  (+837 more)
lib/: utils.ts  (+1 more)
services/petri_engine/: Cargo.toml  Dockerfile  README.md
services/petri_engine/src/: chemistry.rs  config.rs  hypha.rs  lib.rs  memory.rs  nutrients.rs  rng.rs  signal.rs  world.rs
services/petri_engine/src/organisms/: bacteria.rs  cells.rs  fungi.rs  mildew.rs  mod.rs  mold.rs  virus.rs
(+4037 files in other folders)
