[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mycosoft-mas"
version = "0.1.0"
description = "Mycosoft Multi-Agent System"
authors = ["Mycosoft Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.7.0"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
psutil = "^5.9.0"
scikit-learn = "^1.3.0"
aiohttp = "^3.9.0"
prometheus-fastapi-instrumentator = "^7.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.0"
bcrypt = "^4.0.1"
networkx = "^3.2"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 