[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mycosoft-mas"
version = "0.1.0"
description = "Mycosoft Multi-Agent System"
authors = ["Mycosoft Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
packaging = "^24.2"
redis = "^7.1.0"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.16.0"
prometheus-client = "^0.23.0"
python-dotenv = "^1.0.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
httpx = "^0.28.0"
python-multipart = "^0.0.20"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
psutil = "^7.1.0"
scikit-learn = "^1.8.0"
aiohttp = "^3.11.0"
asyncpg = "^0.30.0"
prometheus-fastapi-instrumentator = "^7.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.0"
bcrypt = "^5.0.0"
networkx = "^3.6.0"
websockets = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.15.0"
pylint = "^4.0.0"
ruff = "^0.9.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 