[package]
name = "petri_engine"
version = "0.1.0"
edition = "2021"
description = "Mycosoft Petri Dish v2 — deterministic hybrid WASM + headless microbiome simulation"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "petri_engine_service"
path = "bin/petri_engine_service.rs"
required-features = ["server"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:tower-http"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
wasm-bindgen = { version = "0.2", optional = true }

# Native HTTP server
axum = { version = "0.7", optional = true, features = ["ws", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
[dev-dependencies]
